Fixing links to assets for GitHub Pages.

--- a/pages/game.html
+++ b/pages/game.html
@@ -9,7 +9,7 @@
 			<li>
 				<div>
 					<div class="wrapper-avatar">
-						<img src="/favicon.ico"/>
+						<img src="../favicon.ico"/>
 					</div>
 					<span>Alexioos95</span>
 				</div>
@@ -52,13 +52,13 @@
 								<label class="game-selector">
 									<input type="radio" name="game" value="pong" aria-label="Pong"/>
 									<div>
-										<img src="/svg/pong.svg"/>
+										<img src="../svg/pong.svg"/>
 									</div>
 								</label>
 								<label class="game-selector">
 									<input type="radio" name="game" value="tetris" aria-label="Tetris"/>
 									<div>
-										<img src="/svg/tetris.svg"/>
+										<img src="../svg/tetris.svg"/>
 									</div>
 								</label>
 							</div>
@@ -153,15 +153,15 @@
 				<div class="wrapper-player-controls">
 					<span class="playername playername-left"></span>
 					<div class="wrapper-controls-svg">
-						<img class="rotate" src="/svg/rotate/left.svg"/>
+						<img class="rotate" src="../svg/rotate/left.svg"/>
 						<div class="key"></div>
 					</div>
 					<div class="wrapper-controls-svg">
-						<img class="rotate" src="/svg/rotate/right.svg"/>
+						<img class="rotate" src="../svg/rotate/right.svg"/>
 						<div class="key"></div>
 					</div>
 					<div class="wrapper-controls-svg">
-						<img class="stick" src="/svg/stick/state0.svg"/>
+						<img class="stick" src="../svg/stick/state0.svg"/>
 						<div class="wrapper-controls-keys">
 							<div class="key key-top"></div>
 							<div class="key key-left"></div>
@@ -173,15 +173,15 @@
 				<div class="wrapper-player-controls">
 					<span class="playername playername-right"></span>
 					<div class="wrapper-controls-svg">
-						<img class="rotate" src="/svg/rotate/left.svg"/>
+						<img class="rotate" src="../svg/rotate/left.svg"/>
 						<div class="key"></div>
 					</div>
 					<div class="wrapper-controls-svg">
-						<img class="rotate" src="/svg/rotate/right.svg"/>
+						<img class="rotate" src="../svg/rotate/right.svg"/>
 						<div class="key"></div>
 					</div>
 					<div class="wrapper-controls-svg">
-						<img class="stick" src="/svg/stick/state0.svg"/>
+						<img class="stick" src="../svg/stick/state0.svg"/>
 						<div class="wrapper-controls-keys">
 							<div class="key key-top"></div>
 							<div class="key key-left"></div>
@@ -202,7 +202,7 @@
 					<table class="tab-chat active">
 						<tbody>
 							<tr><td>
-								<img src="/favicon.ico"/>User: MSG
+								<img src="../favicon.ico"/>User: MSG
 							</td></tr>
 							<tr><td>User: MSG</td></tr>
 							<tr><td>User: MSG</td></tr>
