--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 		<!--My CSS-->
-		<link rel="stylesheet" type="text/css" href="/index.css">
+		<link rel="stylesheet" type="text/css" href="../index.css">
 		<!--My JS-->
-		<script src="/js/game.js" defer></script>
-		<script src="/js/pong.js" defer></script>
-		<script src="/js/login.js" defer></script>
-		<script src="/js/index.js" defer></script>
+		<script src="../js/game.js" defer></script>
+		<script src="../js/pong.js" defer></script>
+		<script src="../js/login.js" defer></script>
+		<script src="../js/index.js" defer></script>
 	</head>
 	<body>
 	</body>
