Testing Pong on Mobile.

--- a/pages/game.html
+++ b/pages/game.html
@@ -135,7 +135,7 @@
 				</div>
 			</section>
 		</div>
-		<div class="wrapper-screen">
+		<div class="wrapper-screen zindex">
 			<div class="wrapper-canvas card">
 				<form class="tournament-form hidden">
 					<i class="fa-solid fa-circle-arrow-left"></i>
@@ -192,7 +192,7 @@
 				</div>
 			</s>
 		</div>
-		<section class="wrapper-right-section">
+		<section class="wrapper-right-section zindex">
 			<div class="wrapper-tabs card">
 				<div class="wrapper-tabs-button">
 					<button type="button" class="active"><h3>Chat</h3></button>
