Now usable on mobile.

--- a/pages/game.html
+++ b/pages/game.html
@@ -6,13 +6,18 @@
 	<h1>ft_transcendance</h1>
 	<nav>
 		<ul>
-			<li>
+			<li class="wrapper-nav-user">
 				<div>
 					<div class="wrapper-avatar">
 						<img src="../favicon.ico"/>
 					</div>
 					<span>Alexioos95</span>
 				</div>
+			</li>
+			<li class="for-phone">
+				<button>
+					<i class="fa-solid fa-gamepad"></i>
+				</button>
 			</li>
 			<li class="for-phone">
 				<button>
@@ -31,7 +36,7 @@
 				</button>
 			</li>
 			<li>
-				<button class="login-button">
+				<button>
 					<i class="fa-solid fa-arrow-right-to-bracket"></i>
 					<span>Se deconnecter</span>
 				</button>
