--- a/pages/game.html
+++ b/pages/game.html
@@ -1,18 +1,16 @@
 <div class="please-rotate">
-	<div class="phone"></div>
-	<p>Veuillez tourner votre écran sur le côté</p>
+	<div></div>
+	<p>Veuillez tourner votre appareil sur le côté</p>
 </div>
 <header>
 	<h1>ft_transcendance</h1>
 	<nav>
 		<ul>
-			<li class="wrapper-nav-user">
-				<div>
-					<div class="wrapper-avatar">
-						<img src="../favicon.ico"/>
-					</div>
-					<span>Alexioos95</span>
+			<li class="nav-user">
+				<div class="nav-user-avatar">
+					<img src="../favicon.ico"/>
 				</div>
+				<span>Alexioos95</span>
 			</li>
 			<li class="for-phone">
 				<button>
@@ -47,99 +45,97 @@
 <main>
 	<h2>LOADING</h2>
 	<div class="wrapper-playzone">
-		<div class="wrapper-overflow card">
-			<section class="wrapper-left-section">
-				<form>
-					<div class="wrapper-selectors">
-						<div class="wrapper-game-selectors">
-							<h3 aria-label="Choisissez le jeu: Pong ou Tetris">Jeu</h3>
-							<div class="wrapper-game-selector">
-								<label class="game-selector">
-									<input type="radio" name="game" value="pong" aria-label="Pong"/>
-									<div>
-										<img src="../svg/pong.svg"/>
-									</div>
-								</label>
-								<label class="game-selector">
-									<input type="radio" name="game" value="tetris" aria-label="Tetris"/>
-									<div>
-										<img src="../svg/tetris.svg"/>
-									</div>
-								</label>
-							</div>
-						</div>
-						<div class="wrapper-mode-selectors">
-							<h3 aria-label="Choisissez le mode de jeu: ">Mode</h3>
-							<div class="wrapper-mode-selector">
-								<label class="mode-selector">
-									<input disabled type="radio" name="mode" value="1vAI" aria-label="Joueur contre Ordinateur"/>
-									<div class="wrapper-circle">
-										<div class="base-circle">
-											<div class="top-circle"></div>
-										</div>
-									</div>
-									<span>1vIA</span>
-								</label>
-								<label class="mode-selector" title="Ce mode est désactivé sur téléphone et tablette">
-									<input type="radio" name="mode" value="1v1" aria-label="Joueur contre Joueur en local"/>
-									<div class="wrapper-circle">
-										<div class="base-circle">
-											<div class="top-circle"></div>
-										</div>
-									</div>
-									<span>1v1 local</span>
-								</label>
-								<label class="mode-selector" title="Ce mode est désactivé sur téléphone et tablette">
-									<input type="radio" name="mode" value="tournament" aria-label="Tournoi a 4 joueurs en local"/>
-									<div class="wrapper-circle">
-										<div class="base-circle">
-											<div class="top-circle"></div>
-										</div>
-									</div>
-									<span>Tournoi local a 4</span>
-								</label>
-								<label class="mode-selector" title="Ce mode est désactivé si vous n'êtes pas connecté">
-									<input disabled type="radio" name="mode" value="online" aria-label="Joueur contre Joueur en ligne"/>
-									<div class="wrapper-circle">
-										<div class="base-circle">
-											<div class="top-circle"></div>
-										</div>
-									</div>
-									<span>1v1 en ligne</span>
-								</label>
-							</div>
+		<section class="wrapper-left-section card">
+			<form>
+				<div class="wrapper-selectors">
+					<div class="wrapper-game-selectors">
+						<h3 aria-label="Choisissez le jeu: Pong ou Tetris">Jeu</h3>
+						<div class="wrapper-game-selector">
+							<label class="game-selector">
+								<input type="radio" name="game" value="pong" aria-label="Pong"/>
+								<div>
+									<img src="../svg/pong.svg"/>
+								</div>
+							</label>
+							<label class="game-selector">
+								<input type="radio" name="game" value="tetris" aria-label="Tetris"/>
+								<div>
+									<img src="../svg/tetris.svg"/>
+								</div>
+							</label>
 						</div>
 					</div>
-					<div class="wrapper-submit-button">
-						<button id="selector" type="button" aria-label="Jouer !">
-							<span>Insérer une pièce</span>
-							<div class="wrapper-slot">
-								<div class="slot"></div>
-							</div>
-						</button>
-					</div>
-				</form>
-				<div class="tournament-overview hidden">
-					<div class="tournament-match">
-						<span class="tournament-player"></span>
-						<span class="tournament-marker"></span>
-						<span class="tournament-player"></span>
-					</div>
-					<div class="bar"></div>
-					<div class="tournament-match">
-						<span class="tournament-player"></span>
-						<span class="tournament-marker"></span>
-						<span class="tournament-player"></span>
-					</div>
-					<div class="bar"></div>
-					<div class="tournament-match">
-						<span class="tournament-winner" data-decided="tbd"></span>
-						<span class="tournament-marker"></span>
-						<span class="tournament-winner" data-decided="tbd"></span>
+					<div class="wrapper-mode-selectors">
+						<h3 aria-label="Choisissez le mode de jeu: ">Mode</h3>
+						<div class="wrapper-mode-selector">
+							<label class="mode-selector">
+								<input disabled type="radio" name="mode" value="1vAI" aria-label="Joueur contre Ordinateur"/>
+								<div class="wrapper-circle">
+									<div class="base-circle">
+										<div class="top-circle"></div>
+									</div>
+								</div>
+								<span>1vIA</span>
+							</label>
+							<label class="mode-selector" title="Ce mode est désactivé sur téléphone et tablette">
+								<input type="radio" name="mode" value="1v1" aria-label="Joueur contre Joueur en local"/>
+								<div class="wrapper-circle">
+									<div class="base-circle">
+										<div class="top-circle"></div>
+									</div>
+								</div>
+								<span>1v1 local</span>
+							</label>
+							<label class="mode-selector" title="Ce mode est désactivé sur téléphone et tablette">
+								<input type="radio" name="mode" value="tournament" aria-label="Tournoi a 4 joueurs en local"/>
+								<div class="wrapper-circle">
+									<div class="base-circle">
+										<div class="top-circle"></div>
+									</div>
+								</div>
+								<span>Tournoi local a 4</span>
+							</label>
+							<label class="mode-selector" title="Ce mode est désactivé si vous n'êtes pas connecté">
+								<input disabled type="radio" name="mode" value="online" aria-label="Joueur contre Joueur en ligne"/>
+								<div class="wrapper-circle">
+									<div class="base-circle">
+										<div class="top-circle"></div>
+									</div>
+								</div>
+								<span>1v1 en ligne</span>
+							</label>
+						</div>
 					</div>
 				</div>
-			</section>
-		</div>
+				<div class="wrapper-submit-button">
+					<button id="selector" type="button" aria-label="Jouer !">
+						<span>Insérer une pièce</span>
+						<div class="wrapper-slot">
+							<div class="slot"></div>
+						</div>
+					</button>
+				</div>
+			</form>
+			<div class="tournament-overview hidden">
+				<div class="tournament-match">
+					<span class="tournament-player"></span>
+					<span class="tournament-marker"></span>
+					<span class="tournament-player"></span>
+				</div>
+				<div class="bar"></div>
+				<div class="tournament-match">
+					<span class="tournament-player"></span>
+					<span class="tournament-marker"></span>
+					<span class="tournament-player"></span>
+				</div>
+				<div class="bar"></div>
+				<div class="tournament-match">
+					<span class="tournament-winner" data-decided="tbd"></span>
+					<span class="tournament-marker"></span>
+					<span class="tournament-winner" data-decided="tbd"></span>
+				</div>
+			</div>
+		</section>
 		<div class="wrapper-screen zindex">
 			<div class="wrapper-canvas card">
 				<form class="tournament-form hidden">
