Responsive and accessibility tests.

--- a/pages/game.html
+++ b/pages/game.html
@@ -44,7 +44,7 @@
 </header>
 <main>
 	<h2>LOADING</h2>
-	<div class="wrapper-playzone">
+	<div class="wrapper-sections">
 		<section class="wrapper-left-section card">
 			<form>
 				<div class="wrapper-selectors">
