Fixed crash; Responsiveness done; Design of chat done.

--- a/pages/game.html
+++ b/pages/game.html
@@ -8,7 +8,7 @@
 		<ul>
 			<li class="nav-user">
 				<div class="nav-user-avatar">
-					<img src="../favicon.ico" alt="Avatar de l'utilisateur">
+					<img src="/favicon.ico" alt="Avatar de l'utilisateur">
 				</div>
 				<span>Alexioos95</span>
 			</li>
@@ -54,13 +54,13 @@
 							<label class="game-selector">
 								<input type="radio" name="game" value="pong" aria-label="Pong">
 								<span>
-									<img src="../svg/pong.svg" alt="Pong">
+									<img src="/svg/pong.svg" alt="Pong">
 								</span>
 							</label>
 							<label class="game-selector">
 								<input type="radio" name="game" value="tetris" aria-label="Tetris">
 								<span>
-									<img src="../svg/tetris.svg" alt="Tetris">
+									<img src="/svg/tetris.svg" alt="Tetris">
 								</span>
 							</label>
 						</div>
@@ -154,15 +154,15 @@
 				<div class="wrapper-player-controls">
 					<span class="playername playername-left"></span>
 					<div class="wrapper-controls-svg">
-						<img class="rotate" src="../svg/rotate/left.svg" alt="Tourner à gauche">
+						<img class="rotate" src="/svg/rotate/left.svg" alt="Tourner à gauche">
 						<div class="key"></div>
 					</div>
 					<div class="wrapper-controls-svg">
-						<img class="rotate" src="../svg/rotate/right.svg" alt="Tourner à droite">
+						<img class="rotate" src="/svg/rotate/right.svg" alt="Tourner à droite">
 						<div class="key"></div>
 					</div>
 					<div class="wrapper-controls-svg">
-						<img class="stick" src="../svg/stick/state0.svg" alt="Stick analogique (décoration)">
+						<img class="stick" src="/svg/stick/state0.svg" alt="Stick analogique (décoration)">
 						<div class="wrapper-controls-keys">
 							<div class="key key-top"></div>
 							<div class="key key-left"></div>
@@ -174,15 +174,15 @@
 				<div class="wrapper-player-controls">
 					<span class="playername playername-right"></span>
 					<div class="wrapper-controls-svg">
-						<img class="rotate" src="../svg/rotate/left.svg" alt="Tourner à gauche">
+						<img class="rotate" src="/svg/rotate/left.svg" alt="Tourner à gauche">
 						<div class="key"></div>
 					</div>
 					<div class="wrapper-controls-svg">
-						<img class="rotate" src="../svg/rotate/right.svg" alt="Tourner à droite">
+						<img class="rotate" src="/svg/rotate/right.svg" alt="Tourner à droite">
 						<div class="key"></div>
 					</div>
 					<div class="wrapper-controls-svg">
-						<img class="stick" src="../svg/stick/state0.svg" alt="Stick analogique (décoration)">
+						<img class="stick" src="/svg/stick/state0.svg" alt="Stick analogique (décoration)">
 						<div class="wrapper-controls-keys">
 							<div class="key key-top"></div>
 							<div class="key key-left"></div>
@@ -204,7 +204,10 @@
 						<tbody>
 							<tr>
 								<td>
-									<img src="../favicon.ico" alt="Avatar de l'utilisateur">User: MSG
+									<div class="chat-user-avatar">
+										<img src="/favicon.ico" alt="Avatar de l'utilisateur">
+									</div>
+									<p><span>User</span>: MSG</p>
 								</td>
 							</tr>
 							<tr><td>User: MSG</td></tr>
